Updated button style to green

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>📷 Upload Scanned Label</h1>
     <form id="uploadForm">
         <input type="file" name="image" id="imageInput" accept="image/*" required>
-        <button type="submit">Scan & Update</button>
+        <button type="submit" style="background-color: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 5px;">Scan & Update</button>
     </form>
     <div id="result"></div>
     <script>
